update various docs

--- a/docs/tutorials/maintenance/database.mdx
+++ b/docs/tutorials/maintenance/database.mdx
@@ -94,3 +94,10 @@ docker start open-webui
 ```
 
 With these steps, you can easily manage your Open WebUI migration or backup process. Keep in mind the database format you're using to ensure compatibility.
+
+---
+
+## Related Guides
+
+- [SQLite Database Overview](/tutorials/tips/sqlite-database) - Detailed database schema and SQLCipher encryption setup
+- [Backups](/tutorials/maintenance/backups) - Comprehensive backup strategies for your instance
