--- a/docs/getting-started/quick-start/starting-with-functions.mdx
+++ b/docs/getting-started/quick-start/starting-with-functions.mdx
@@ -102,11 +102,11 @@ Some functions need credentials (like Anthropic’s API key):
 
 Ready to build your own? Check out our detailed development guides:
 
-*   **[Functions Overview](../../../features/plugin/functions/index.mdx)**: Learn the basics of the Functions system.
-*   **[Pipes Guide](../../../features/plugin/functions/pipe.mdx)**: Create custom model providers and logic pipelines.
-*   **[Filters Guide](../../../features/plugin/functions/filter.mdx)**: Intercept and modify messages (Input/Output guards).
-*   **[Actions Guide](../../../features/plugin/functions/action.mdx)**: Add buttons/actions to messages.
-*   **[Tools Guide](../../../features/plugin/tools/index.mdx)**: Build tools for LLMs to use (RAG, APIs).
+*   **[Functions Overview](../../features/plugin/functions/index.mdx)**: Learn the basics of the Functions system.
+*   **[Pipes Guide](../../features/plugin/functions/pipe.mdx)**: Create custom model providers and logic pipelines.
+*   **[Filters Guide](../../features/plugin/functions/filter.mdx)**: Intercept and modify messages (Input/Output guards).
+*   **[Actions Guide](../../features/plugin/functions/action.mdx)**: Add buttons/actions to messages.
+*   **[Tools Guide](../../features/plugin/tools/index.mdx)**: Build tools for LLMs to use (RAG, APIs).
 
 *   **[Community Registry](https://openwebui.com/search)**: Browse hundreds of community-made functions.
 
