broken links fixing.

--- a/docs/features/plugin/functions/index.mdx
+++ b/docs/features/plugin/functions/index.mdx
@@ -82,7 +82,7 @@ Learn how to set them up in the [**Action Functions Guide**](./action.mdx).
 Here's how to put Functions to work in Open WebUI:
 
 ### 1. **Install Functions**
-You can install Functions via the Open WebUI interface or by importing them manually. You can find community-created functions on the [Open WebUI Community Site](https://openwebui.com/functions).
+You can install Functions via the Open WebUI interface or by importing them manually. You can find community-created functions on the [Open WebUI Community Site](https://openwebui.com/search).
 
 ⚠️ **Be cautious.** Only install Functions from trusted sources. Running unknown code poses security risks.
 
