--- a/docs/getting-started/quick-start/starting-with-functions.mdx
+++ b/docs/getting-started/quick-start/starting-with-functions.mdx
@@ -28,7 +28,7 @@ Functions are powerful tools, and the community has created thousands of them! Y
 To search and import functions directly from **[Open WebUI Community](https://openwebui.com/search)**, you must be logged in with a registered community account.
 :::
 
-1.  Go to **[Open WebUI Community Search](https://openwebui.com/search)** (or browse `https://openwebui.com/functions`).
+1.  Go to **[Open WebUI Community Search](https://openwebui.com/search)**.
 2.  Explore the library! You can find functions for:
     *   **New Providers**: Anthropic, Google Gemini, Groq.
     *   **Tools**: Web Search, Calculator, Home Assistant control.
